# Lunaviel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-VCL1.0  README.md  build.zig  lunaviel_hardware.txt  plan.md  setup.sh  specs.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  wave_improvement.md
Lunaviel-Core/: Lunaviel-Core.fish  README.md  build.zig  error.txt
Lunaviel-Core/aether/: aurora.zig  etherial.zig  kmain.zig  luminary.zig  starlight.ld  sylvar.zig
Lunaviel-Core/astral/: celestine.zig
Lunaviel-Core/docs/: aether.md  architecture.md  astral.md  development.md  documentation.md  lunaviel.md  memoria.md  seer.md  sylph.md  testing.md  waves.md
Lunaviel-Core/memoria/: aetherpage.zig  harmonia.zig  lunalloc.zig
Lunaviel-Core/scripts/: build.fish  run-qemu.fish
Lunaviel-Core/seer/: lunartest.zig  oracle.zig  stargaze.zig
Lunaviel-Core/sylph/: moonweave.zig  starthread.zig  taskweave.zig
Lunaviel-Core/test/: qemu_run.fish
docs/: bootflow.md
lunaviel-core/: Cargo.toml  build.rs
lunaviel-core/src/: boot.rs  lib.rs  main.rs
lunaviel-core/src/arch/: mod.rs
lunaviel-core/src/arch/x86_64/: mod.rs  syscall.rs
lunaviel-core/src/drivers/: mod.rs  serial.rs
lunaviel-core/src/fs/: elf_loader.rs  mod.rs
lunaviel-core/src/memory/: mod.rs
lunaviel-core/src/sys/: linux_abi.rs
lunaviel-core/src/syscalls/: mod.rs  syscall_table.rs
scripts/: build.fish
src/core/: boot.fth  interrupts.fth  linker.ld  memory.fth  paging.fth  runtime.fth  uefi_print.zig  uefi_start.zig
(+54 files in other folders)
